fixed alignment in usernav bar

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -200,6 +200,7 @@ img {
 
 #castle-img {
   width: 35px;
+  height: 35px;
 }
 
 #user-experience .progress {
